--- a/jenkinsfile
+++ b/jenkinsfile
@@ -19,7 +19,7 @@ pipeline {
             steps {
                 sshagent(['jenkins-aws-key']) {
                     sh '''
-                    ssh -o StrictHostKeyChecking=no ubuntu@your-ec2-ip <<EOF
+                    ssh -o StrictHostKeyChecking=no ubuntu@54.205.173.117 <<EOF
                         cd /var/www/html
                         git pull origin main
                         sudo systemctl restart apache2
